# app-de-streming-y-venta-online

./: .gitignore  PLAN-live-commerce-mvp.md  README.md  package.json  pnpm-lock.yaml
apps/api/: .env.example  pyproject.toml
apps/api/app/: auth.py  cf_stream.py  config.py  db.py  main.py  room.py  serializers.py  storage.py
apps/api/app/routers/: checkout.py  orders.py  products.py  streams.py
apps/api/migrations/: 0001_init.sql  0002_peak_viewers.sql
apps/web/: nuxt.config.ts  package.json
apps/web/app/: app.vue  types.ts
apps/web/app/assets/: main.css
apps/web/app/components/: AuthModal.vue  ChatPanel.vue  CheckoutSheet.vue  DevAuth.vue  PinnedCard.vue  ProductRail.vue  ReactionOverlay.vue  StatCard.vue  StreamCard.vue
apps/web/app/composables/: useApi.ts  useAuth.ts  useAuthModal.ts  useCheckout.ts  useStreamRoom.ts  useWhepPlayer.ts  useWhipBroadcast.ts
apps/web/app/pages/: index.vue  orders.vue
apps/web/app/pages/studio/: index.vue
apps/web/app/pages/studio/live/: [streamId].vue
apps/web/app/pages/studio/summary/: [streamId].vue
apps/web/app/pages/watch/: [streamId].vue
