[project]
name = "live-commerce-api"
version = "0.1.0"
description = "API live commerce — FastAPI"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "aiosqlite>=0.20",
    "pydantic-settings>=2.4",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "pyjwt[crypto]>=2.9",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]
